--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@babel/core": "^7.19.1",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^1.0.6",
+    "@portabletext/react": "^1.0.6",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.38.1",
     "next": "12.3.1",
+    "next-sanity": "^0.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stripe": "^10.11.0"
