--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
-    "@stripe/stripe-js": "^1.38.1",
+    "@stripe/stripe-js": "^1.41.0",
     "next": "12.3.1",
     "next-sanity": "^0.8.4",
     "react": "18.2.0",
@@ -24,7 +24,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.4",
-    "stripe": "^10.11.0"
+    "stripe": "^10.14.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
@@ -34,5 +34,10 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
