--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@sanity/image-url": "^1.0.1",
     "@stripe/stripe-js": "^1.41.0",
     "next": "12.3.1",
+    "next-auth": "^4.14.0",
+    "next-auth-sanity": "^1.4.4",
     "next-sanity": "^0.8.4",
     "react": "18.2.0",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.4",
+    "react-responsive": "^9.0.0",
     "stripe": "^10.14.0"
   },
   "devDependencies": {
